@@ -12,6 +12,7 @@
 * Spreedly: Pass verification value [duff]
 * Paymill: Add support for specifying the :customer [Sbastien]
 * Realex: Correct AVS input format [ExxKA]
+* USAEpay Transaction: Use sandbox when in test mode [radar]
 
 == Version 1.38.1 (September 16, 2013)
 
